--- a/src/components/landing-page/LandingPage.css
+++ b/src/components/landing-page/LandingPage.css
@@ -60,7 +60,7 @@
   font-size: 18px;
   text-decoration: none;
   background-color: #068AAD;
-  color: #33363b;
+  color: #f5f5f5;
   text-align: center;
   font-family: 'Proza Libre', sans-serif;
 }
