--- a/src/components/layout/Nav.css
+++ b/src/components/layout/Nav.css
@@ -5,7 +5,7 @@ nav {
   align-items: center; */
   /* padding-left: 20px;
   padding-right: 20px; */
-  position: fixed;
+  position: sticky;
   width: 100%;
   font-size: 15px;
   height: 60px;
@@ -56,6 +56,7 @@ nav {
   position: absolute;
   top: 22px;
   right: 30px;
+  font-size: 22px;
 }
 
 .resLinks-wide {
